Twenty Eleven: Fix some mobile layout bugs on single post format view. props lancewillett, fixes #25019.
Built from https://develop.svn.wordpress.org/trunk@25042


git-svn-id: http://core.svn.wordpress.org/trunk@25029 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -2516,6 +2516,11 @@ p.comment-form-comment {
 	#branding {
 		border-top: none;
 	}
+	.singular .entry-header .entry-meta,
+	.singular .entry-header .entry-format,
+	.singular .entry-meta .edit-link a {
+		position: static;
+	}
 }
 
 
